k8s-manifest/worker/worker-app-deploy.yaml
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deploy
  labels:
    name: worker-app-deploy
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
      app: voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: voting-app
    spec:
      containers:
      - name: worker-app
        image: kodekloud/examplevotingapp_worker:v1
